# ST3D_project

./: .gitignore  .gitmodules  CMakeLists.txt  Concepts.md  README.md  ToDo.txt
inc/: defines.h
inc/logger/: logger.h
inc/render/: renderer.h  window.h
inc/render/geometry/: queues.h  renderer.h  window.h
include/: buffers.h  defines.h  device.h  logger.h  main.h  math.h  pipeline.h  queues.h  renderer.h  swap_chain.h  validation.h  vertex.h
shaders/: simple_frag.frag  simple_shader.vert
src/: defines.h  main.c  main.h
src/buffers/: buffers.c  vertex.c
src/core/: defines.h  logger.h
src/core/logger/: logger.c  logger.h
src/core/render/: buffers.c  buffers.h  command_pool.c  command_pool.h  device.c  device.h  framebuffers.c  framebuffers.h  pipeline.c  pipeline.h  queues.c  queues.h  renderer.c  renderer.h  surface.c  surface.h  swap_chain.c  swap_chain.h  sync.c  sync.h  window.c  window.h
src/core/render/geometry/: pipeline.c  pipeline.h  queues.c  queues.h  renderer.c  renderer.h  window.c  window.h
src/core/render/validation/: validation.c  validation.h
src/render/: device.c  pipeline.c  queues.c  renderer.c  swap_chain.c  window.c
src/render/validation/: validation.c
src/validation/: validation.c
